--- a/common.gl.po
+++ b/common.gl.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-06 07:22+0200\n"
+"POT-Creation-Date: 2025-10-07 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
 "Last-Translator: LegendGuard, 2020\n"
 "Language-Team: Galician (http://app.transifex.com/team-xonotic/xonotic/"
@@ -2145,12 +2145,9 @@ msgstr ""
 #, c-format
 msgid ""
 "%s is usually played as either soccer where players walk into the ball to "
-"kick it around, or basketball where players have a %s so can pass the ball "
-"and intercept passes."
+"kick it around, or basketball where players have a %s so they can pass the "
+"ball and intercept passes."
 msgstr ""
-"%s normalmente xógase como fútbol, onde os xogadores empuxan a bola co corpo "
-"para xogar con ela, ou como baloncesto, onde os xogadores teñen un %s para "
-"poder pasar a bola e interceptar pases."
 
 #: qcsrc/common/gametypes/gametype/nexball/nexball.qc:12
 msgid ""
