--- a/common.ga.po
+++ b/common.ga.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-06 07:22+0200\n"
+"POT-Creation-Date: 2025-10-07 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
 "Last-Translator: Kevin Scannell <kscanne@gmail.com>, 2017\n"
 "Language-Team: Irish (http://app.transifex.com/team-xonotic/xonotic/language/"
@@ -1956,8 +1956,8 @@ msgstr ""
 #, c-format
 msgid ""
 "%s is usually played as either soccer where players walk into the ball to "
-"kick it around, or basketball where players have a %s so can pass the ball "
-"and intercept passes."
+"kick it around, or basketball where players have a %s so they can pass the "
+"ball and intercept passes."
 msgstr ""
 
 #: qcsrc/common/gametypes/gametype/nexball/nexball.qc:12
